test/TestPhases/typechecker/valid/opaque.blc
import I1 "../imports/opaque_imp"


@[EntryPoint]
activity Main () ()
    //var v: I1.C = {foo = I1.initO()}
    await false
end