test/TestPhases/typechecker/invalid/receiverForVoid.blc
activity VoidReturn ()
    await true
    return
end


@[EntryPoint]
activity Main ()
    var v: bool
    run v = VoidReturn()
    run var void = VoidReturn()
    run _ = VoidReturn()
end
